# MCP-Example

./: .gitignore  Java_variable_description.md  OWASP 模型上下文協定 (MCP) 十大相似安全風險.docx  Quality_Controls.md  Quality_Controls1.bpmn  Quality_Controls2.bpmn  README-01.GoogleSheet.md  README-01.Zapier.md  README-01.md  README-02.Flowise.md  README-02.FlowiseDocker.md  README-03.McpExample.md  README-04.McpSecurityRiskTop10.md  README-Summary.md  README.md  README_FAST_AGENT.md  Sample 01_SystemPrompt1.md  Sample 01_SystemPrompt2.md  angular-spa.md  bits-chart.json  bpmn-naming-conventions-en.md  bpmn-naming-conventions-zh.md  claude_desktop_config.json  cursor-mcp-config.json  main.py  n8n_mcp_server1.json  pyproject.toml  requirements.txt  security_checklist.md  server.py  simple_fast_agent.py  test.js  text_tracking_sampleV2.html
AI_autoWith_n8n+LLM/: README0-Setup.md  README1-Introduction.md  README2-TranscriptAudio.md  README3-ChatWithDocuments.md  README3-Vector DB Comparison.xlsx  README4-Slack.md  README5-TravelCoPilot.md  README5-telegram.md  README6-Sec10KNvidia.md  README7-PowerfulTools.md  README8-Others.md  README8-PostgreSQL.txt  SaaS_BestPractice.md  SaaS_BestPractice1.md  n8n_ghost.js  n8n_subflow1.js  package-lock.json  prompt.txt  prompt1.txt  ~$US+Stock+Valuation+Data+Set.xlsx
BPMN-BA/: BPMN Key takeaways.docx  README.md  README1-types.md  README2-advanced.md  (+12 more)
Pinecone/: .env.template  CHANGELOG.md  README.md  SPLITTER_CHANGELOG.md  USAGE.md  create_index.py  embed_folder.py  example.env  pyproject.toml  query_interface.py  run_ui.bat  run_ui.py  test.py
(+88 files in other folders)
